refactor: fix critical bugs, improve architecture, and clean up code quality
Fix 7 critical bugs: EncryptionUtils.decrypt calling encrypt, KafkaProducerConfig
bootstrapServers typed as long, KafkaConsumerConfig wrong package, KafkaConsumer
headers never added, REPLACE_ALL_CHARS wrong arg indices, extra } in @Value
annotations, and ScenarioContext format string typo.

Extract shared KafkaSslProperties, make AwaitHandler lock instance-level for
concurrency safety, unify ObjectMapper instances, modernize DateUtils to java.time,
remove Service Locator anti-pattern from feature method enums by threading
ScenarioContext through the call chain, consolidate TestContext into ScenarioContext,
enforce consistent constructor injection, fix exception swallowing in saveRecord,
and split KafkaSteps god class into focused ScenarioHooks, PayloadSteps,
KafkaAssertionSteps, and slimmed KafkaSteps.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>